# spaceform

./: Cargo.toml  README.md  rustfmt.toml
benches/: benchmarks.rs
src/: coordinate_system.rs  direction.rs  lib.rs  matrix.rs  normal.rs  point.rs  rotation.rs  transform.rs
src/base/: matrix.rs  mod.rs  quaternion.rs
src/base/vector/: mod.rs  scalar.rs  wasm.rs  x86.rs
src/vector/: mod.rs  scalar.rs  x86.rs
